---------------------------------------------------------------------------------------------------
Version: 0.69.24
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.23
Date: 2025-05-23
  Changes:
    - Fixed compatibility issue with ruins mods placing splitters on Rubia.
  Balancing:
    - Buffed pole steel yield.
---------------------------------------------------------------------------------------------------
Version: 0.69.22
Date: 2025-05-23
  Changes:
    - Aircraft space age mod compatibility.
  Balancing:
    - Crapapult cheaper.
    - First Rubia tech is cheaper.
---------------------------------------------------------------------------------------------------
Version: 0.69.21
Date: 2025-05-23
  Changes:
    - Banned Quantum Fabricator's dedigitizer reactor, for teleporting items.
    - Fixed compatibility with mods that affect promethium science.
---------------------------------------------------------------------------------------------------
Version: 0.69.20
Date: 2025-05-23
  Changes:
    - Fixed incompatibility with Factoriolib and Tiberium dawn.
---------------------------------------------------------------------------------------------------
Version: 0.69.19
Date: 2025-05-22
  Changes:
    - More Megabasing info added to tips.
    - Spidertron lore updated.
---------------------------------------------------------------------------------------------------
Version: 0.69.18
Date: 2025-05-22
  Changes:
    - Fixed promethium science prerequisites.
    - Moving forward required version of Rubia-assets.
    - Rubia science is again added automatically to infinite research prod (unless you toggle it off in the mod settings).
---------------------------------------------------------------------------------------------------
Version: 0.69.17
Date: 2025-05-22
  Changes:
    - Added support for inserters with hard-coded unique angles!